src/components/all.sass
@import "~bulma/sass/utilities/initial-variables"

// Config vars

$primary: #0d333c;
$primary-invert: #fdcd3a;
$secondary: #359dd8;
$gray: #fafafa;

body
  font-family: 'ABeeZee', sans-serif !important

.top
  padding: 20px
  background-color: #333333
  height: 110px

.content .taglist
  list-style: none
  margin-bottom: 0
  margin-left: 0
  margin-right: 1.5rem
  margin-top: 1.5rem
  display: flex
  flex-wrap: wrap
  justify-content: left
  align-items: center
  li
    padding: 0 2rem 1rem 0
    margin-bottom: 1.5rem
    margin-top: 0

// Helper Classes
.full-width-image-container
  width: 100vw
  height: 400px
  position: relative
  left: 50%
  right: 50%
  margin: 5em -50vw
  background-size: cover
  background-position: bottom
  display: flex
  justify-content: center
  align-items: center

.margin-top-0
  margin-top: 0 !important

.logo
  max-width: 60%
  position: fixed
  z-index: 200

.rs-nav-default .rs-nav-item>.rs-nav-item-content
  border-radius: 0
  font-size: 21px
  color: #ffffff

@import "~bulma"

.column
  padding-top: 0

